# tag

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
examples/: tag-organize.rs  tag-view.nu  tag-view.rs
src/: combine.rs  ext.rs  find.rs  fs.rs  lib.rs  name.rs  organize.rs  root.rs  sort.rs  tag.rs  tagged_file.rs  tagged_filesystem.rs  tagged_path.rs  tags_script.rs  testing.rs  types.rs
src/organize/: combine.rs  sort.rs
src/tagged_filesystem/: build.rs  errors.rs  find.rs  init.rs  new_file.rs  op.rs  rename.rs  rm.rs  testing.rs
src/tagged_filesystem/mod/: mod.rs
src/types/: tag.rs  tagged_path.rs
