[package]
name = "tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_enums = "0.8.1"
clap = { version = "4.1.4", features = ["derive"] }
derive_more = "0.99.17"
filesystem = "0.4.4"
itertools = "0.11.0"
ref-cast = "1.0.14"
thiserror = "1.0.43"

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.0.0"
test-strategy = "0.3.0"
