[package]
name = "tag"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "A utility to automatically organize files with a simple tagging system"
repository = "https://github.com/justinlovinger/tag"
readme = "README.md"
keywords = ["tagging", "utility", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.75"
by_address = "1.1.0"
clap = { version = "4.1.4", features = ["derive"] }
crossbeam-channel = "0.5.8"
derive_more = "0.99.17"
internment = "0.7.1"
itertools = "0.11.0"
rayon = "1.8.0"
ref-cast = "1.0.14"
rustc-hash = "1.1.0"
smallvec = "1.11.1"
stacker = "0.1.15"
tempfile = "3.14.0"
thiserror = "1.0.43"

[dev-dependencies]
once_cell = "1.18.0"
proptest = "1.0.0"
test-strategy = "0.3.0"
