[package]
name = "tag"
version = "0.2.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Manage paths with a simple tagging system"
repository = "https://github.com/justinlovinger/tag"
readme = "README.md"
keywords = ["tagging", "utility", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
internment = "0.8.6"
itertools = "0.14.0"
rayon = "1.11.0"
ref-cast = "1.0.25"
regex = "1.12.2"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
stacker = "0.1.22"
tempfile = "3.23.0"
thiserror = "2.0.17"

[dev-dependencies]
proptest = "1.9.0"
test-strategy = "0.4.3"
